--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "gatsby": "^0.12.41",
+    "gatsby-plugin-sass": "^0.1.2",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "react-addons-shallow-compare": "^15.5.2",
@@ -20,7 +21,8 @@
     "underscore.string": "^3.2.3"
   },
   "devDependencies": {
-    "gh-pages": "^0.12.0"
+    "gh-pages": "^0.12.0",
+    "image-webpack-loader": "^3.3.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
