--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "gatsby": "^0.12.41",
     "gatsby-plugin-sass": "^0.1.2",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "react-addons-shallow-compare": "^15.5.2",
