--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
   },
   "dependencies": {
+    "antd": "^2.10.1",
     "classnames": "^2.2.5",
     "gatsby": "^0.12.41",
     "gatsby-plugin-sass": "^0.1.2",
