完成评论、锚点组件重构50

--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,4 @@ authorName = "jokingZhang"
 authorDesc = "I wan't to be a Coder!"
 authorImage = "author.png"
 linkPrefix = "/jokingzhang"
+shortname = "https-jokingzhang-netlify-com"
