--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.18.1",
     "react-addons-shallow-compare": "^15.5.2",
     "react-dates": "^4.1.0",
+    "react-disqus-thread": "^0.4.0",
     "react-helmet": "^3.2.2",
     "react-responsive-grid": "^0.3.3",
     "react-typography": "^0.15.0",
