--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-disqus-thread": "^0.4.0",
     "react-helmet": "^3.2.2",
     "react-responsive-grid": "^0.3.3",
+    "react-sticky": "^6.0.1",
     "react-typography": "^0.15.0",
     "typography": "^0.15.0",
     "typography-theme-wordpress-2016": "^0.15.0",
