--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-blogTitle = "My Awesome Blog, My New Life !"
+blogTitle = "jokingZhang's blog"
 authorName = "jokingZhang"
 authorDesc = "I wan't to be a Coder!"
 authorImage = "author.png"
